--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,12 +2,21 @@ cmake_minimum_required(VERSION 3.0.2)
 project(quadrupedal_tests)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-#add_compile_options(-std=c++11)
+add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED COMPONENTS
+	roscpp
+	std_msgs
+	geometry_msgs
+	tf
+	kdl_parser
+	trac_ik_lib
+)
+
+include_directories(${catkin_INCLUDE_DIRS})
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -112,7 +121,7 @@ catkin_package(
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
 include_directories(
-# include
+	include
 # ${catkin_INCLUDE_DIRS}
 )
 
@@ -198,5 +207,9 @@ include_directories(
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
 
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
+add_executable(set_transforms src/set_transforms.cpp)
+add_executable(test_node src/test_node.cpp)
+add_executable(RobotLeg src/RobotLeg.cpp)
+target_link_libraries(set_transforms ${catkin_LIBRARIES})
+target_link_libraries(test_node ${catkin_LIBRARIES})
+target_link_libraries(RobotLeg ${catkin_LIBRARIES})
