--- a/package.xml
+++ b/package.xml
@@ -28,11 +28,18 @@
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
 
+<depend>roscpp</depend> 
+<depend>std_msgs</depend>
+<depend>geometry_msgs</depend>
+<depend>tf</depend>
+<depend>kdl_parser</depend>
+<depend>trac_ik_lib</depend>
+
   <!-- The *depend tags are used to specify dependencies -->
   <!-- Dependencies can be catkin packages or system dependencies -->
   <!-- Examples: -->
   <!-- Use depend as a shortcut for packages that are both build and exec dependencies -->
-  <!--   <depend>roscpp</depend> -->
+    
   <!--   Note that this is equivalent to the following: -->
   <!--   <build_depend>roscpp</build_depend> -->
   <!--   <exec_depend>roscpp</exec_depend> -->
