--- a/config/quadrupedal_control.yaml
+++ b/config/quadrupedal_control.yaml
@@ -2,89 +2,89 @@ quadrupedal_test:
   #publish joint states
 
   joint_state_controller:
-    type: joint_state_controller/JointStateController
-    publish_rate: 50
+    type: "joint_state_controller/JointStateController"
+    publish_rate: 2500
 
   #position controllers
   left_front_leg_shoulder_rotate_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: left_front_leg_shoulder_rotate
-    gain: 5000
+    gain: 250
 
   right_front_leg_shoulder_rotate_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: right_front_leg_shoulder_rotate
-    gain: 5000
+    gain: 250  
 
   left_back_leg_shoulder_rotate_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: left_back_leg_shoulder_rotate
-    gain: 5000
+    gain: 250
 
   right_back_leg_shoulder_rotate_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: right_back_leg_shoulder_rotate
-    gain: 5000
+    gain: 250
 
   left_front_leg_shoulder_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: left_front_leg_shoulder_hinge
-    gain: 5000
+    gain: 250
 
   right_front_leg_shoulder_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: right_front_leg_shoulder_hinge
-    gain: 5000
+    gain: 250
 
   left_back_leg_shoulder_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: left_back_leg_shoulder_hinge
-    gain: 5000
+    gain: 250
 
   right_back_leg_shoulder_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: right_back_leg_shoulder_hinge
-    gain: 5000
+    gain: 250
 
   left_front_leg_elbow_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: left_front_leg_elbow_hinge
-    gain: 5000
+    gain: 250
 
   right_front_leg_elbow_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: right_front_leg_elbow_hinge
-    gain: 5000
+    gain: 250
 
   left_back_leg_elbow_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: left_back_leg_elbow_hinge
-    gain: 5000
+    gain: 250
 
   right_back_leg_elbow_hinge_controller:
-    type: my_controller/MyPositionController
+    type: "my_controller/MyPositionController"
     joint: right_back_leg_elbow_hinge
-    gain: 5000
+    gain: 250
 
-  left_front_calf_elbow_hinge_controller:
-    type: my_controller/MyPositionController
-    joint: left_front_calf_elbow_hinge
-    gain: 5000
+#  left_front_calf_elbow_hinge_controller:
+#    type: "my_controller/MyPositionController"
+#    joint: left_front_calf_elbow_hinge
+#    gain: 250
 
-  right_front_calf_elbow_hinge_controller:
-    type: my_controller/MyPositionController
-    joint: right_front_calf_elbow_hinge
-    gain: 5000
+#  right_front_calf_elbow_hinge_controller:
+#    type: "my_controller/MyPositionController"
+#    joint: right_front_calf_elbow_hinge
+#    gain: 250
 
-  left_back_calf_elbow_hinge_controller:
-    type: my_controller/MyPositionController
-    joint: left_back_calf_elbow_hinge
-    gain: 5000
+#  left_back_calf_elbow_hinge_controller:
+#    type: "my_controller/MyPositionController"
+#    joint: left_back_calf_elbow_hinge
+#    gain: 250
 
-  right_back_calf_elbow_hinge_controller:
-    type: my_controller/MyPositionController
-    joint: right_back_calf_elbow_hinge
-    gain: 5000
+#  right_back_calf_elbow_hinge_controller:
+#    type: "my_controller/MyPositionController"
+#    joint: right_back_calf_elbow_hinge
+#    gain: 250
 
   
 
