--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,16 +12,23 @@ find_package(catkin REQUIRED COMPONENTS
 	tf
 	kdl_parser
 	trac_ik_lib
+	cv_bridge
 )
+find_package(OpenCV 4 REQUIRED)
+
+find_package(Armadillo REQUIRED)
 
 include_directories(${catkin_INCLUDE_DIRS})
 
 
 
 catkin_package(
-#  INCLUDE_DIRS include
+   INCLUDE_DIRS
 #  LIBRARIES quadrupedal_tests
-#  CATKIN_DEPENDS other_catkin_pkg
+   CATKIN_DEPENDS roscpp
+   				  sensor_msgs
+   				  std_msgs
+   				  cv_bridge
 #  DEPENDS system_lib
 )
 
@@ -31,6 +38,8 @@ include_directories(
 	${catkin_INCLUDE_DIRS} 
 	${Boost_INCLUDE_DIR} 
 	${GAZEBO_INCLUDE_DIRS}
+	${OpenCV_INCLUDE_DIRS}
+	${ARMADILLO_INCLUDE_DIR}
 )
 
 
@@ -41,4 +50,4 @@ add_executable(controllerTesting src/controllerTesting.cpp)
 target_link_libraries(set_transforms ${catkin_LIBRARIES})
 target_link_libraries(test_node ${catkin_LIBRARIES})
 target_link_libraries(RobotLeg ${catkin_LIBRARIES})
-target_link_libraries(controllerTesting ${catkin_LIBRARIES})
+target_link_libraries(controllerTesting ${catkin_LIBRARIES} ${OpenCV_LIBS} ${ARMADILLO_LIBRARIES})
