--- a/package.xml
+++ b/package.xml
@@ -23,6 +23,8 @@
 <depend>kdl_parser</depend>
 <depend>trac_ik_lib</depend>
 <depend>gazebo_ros</depend>
+<depend>sensor_msgs</depend>
+<depend>cv_bridge</depend>
 
   <buildtool_depend>catkin</buildtool_depend>
 
