meio do caminho lesgo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,7 +47,9 @@ add_executable(set_transforms src/set_transforms.cpp)
 add_executable(test_node src/test_node.cpp)
 add_executable(RobotLeg src/RobotLeg.cpp)
 add_executable(controllerTesting src/controllerTesting.cpp)
+add_executable(legsFrequency src/legsFrequency.cpp)
 target_link_libraries(set_transforms ${catkin_LIBRARIES})
 target_link_libraries(test_node ${catkin_LIBRARIES})
 target_link_libraries(RobotLeg ${catkin_LIBRARIES})
 target_link_libraries(controllerTesting ${catkin_LIBRARIES} ${OpenCV_LIBS} ${ARMADILLO_LIBRARIES})
+target_link_libraries(legsFrequency ${catkin_LIBRARIES})
