iniciando segunda etapa

--- a/package.xml
+++ b/package.xml
@@ -25,6 +25,8 @@
 <depend>gazebo_ros</depend>
 <depend>sensor_msgs</depend>
 <depend>cv_bridge</depend>
+<depend>dynamic_reconfigure</depend>
+
 
   <buildtool_depend>catkin</buildtool_depend>
 
