--- a/config/quadrupedal_control_dynamic_pid.yaml
+++ b/config/quadrupedal_control_dynamic_pid.yaml
@@ -9,70 +9,82 @@ quadrupedal_test:
   left_front_leg_shoulder_rotate_controller:
     type: "effort_controllers/JointPositionController"
     joint: left_front_leg_shoulder_rotate
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   right_front_leg_shoulder_rotate_controller:
     type: "effort_controllers/JointPositionController"
     joint: right_front_leg_shoulder_rotate
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   left_back_leg_shoulder_rotate_controller:
     type: "effort_controllers/JointPositionController"
     joint: left_back_leg_shoulder_rotate
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   right_back_leg_shoulder_rotate_controller:
     type: "effort_controllers/JointPositionController"
     joint: right_back_leg_shoulder_rotate
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   left_front_leg_shoulder_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: left_front_leg_shoulder_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   right_front_leg_shoulder_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: right_front_leg_shoulder_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   left_back_leg_shoulder_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: left_back_leg_shoulder_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   right_back_leg_shoulder_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: right_back_leg_shoulder_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   left_front_leg_elbow_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: left_front_leg_elbow_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   right_front_leg_elbow_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: right_front_leg_elbow_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   left_back_leg_elbow_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: left_back_leg_elbow_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   right_back_leg_elbow_hinge_controller:
     type: "effort_controllers/JointPositionController"
     joint: right_back_leg_elbow_hinge
+    pid: {p: 0.0, i: 0.0, d: 0.0}
 
 #  left_front_calf_elbow_hinge_controller:
 #    type: "my_controller/MyPositionController"
 #    joint: left_front_calf_elbow_hinge
-#    pid: {p: 10000.0, i: 380.0, d: 780.0}
+#    pid: {p: 0.0, i: 0.0, d: 0.0}
 
 #  right_front_calf_elbow_hinge_controller:
 #    type: "my_controller/MyPositionController"
 #    joint: right_front_calf_elbow_hinge
-#    pid: {p: 10000.0, i: 380.0, d: 780.0}
+#    pid: {p: 0.0, i: 0.0, d: 0.0}
 
 #  left_back_calf_elbow_hinge_controller:
 #    type: "my_controller/MyPositionController"
 #    joint: left_back_calf_elbow_hinge
-#    pid: {p: 10000.0, i: 380.0, d: 780.0}
+#    pid: {p: 0.0, i: 0.0, d: 0.0}
 
 #  right_back_calf_elbow_hinge_controller:
 #    type: "my_controller/MyPositionController"
 #    joint: right_back_calf_elbow_hinge
-#    pid: {p: 10000.0, i: 380.0, d: 780.0}
+#    pid: {p: 0.0, i: 0.0, d: 0.0}
 
   
 
