--- a/config/quadrupedal_control.yaml
+++ b/config/quadrupedal_control.yaml
@@ -66,6 +66,11 @@ quadrupedal_test:
     joint: right_back_leg_elbow_hinge
     pid: {p: 10000.0, i: 380.0, d: 780.0}
 
+  spring_controller:
+    type: "effort_controllers/JointPositionController"
+    joint: spring
+    pid: {p: 100.0, i: 0.0, d: 2.0}
+
 #  left_front_calf_elbow_hinge_controller:
 #    type: "my_controller/MyPositionController"
 #    joint: left_front_calf_elbow_hinge
