--- a/config/quadrupedal_control.yaml
+++ b/config/quadrupedal_control.yaml
@@ -7,69 +7,69 @@ quadrupedal_test:
 
   #position controllers
   left_front_leg_shoulder_rotate_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: left_front_leg_shoulder_rotate
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   right_front_leg_shoulder_rotate_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: right_front_leg_shoulder_rotate
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   left_back_leg_shoulder_rotate_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: left_back_leg_shoulder_rotate
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   right_back_leg_shoulder_rotate_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: right_back_leg_shoulder_rotate
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   left_front_leg_shoulder_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: left_front_leg_shoulder_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   right_front_leg_shoulder_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: right_front_leg_shoulder_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   left_back_leg_shoulder_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: left_back_leg_shoulder_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   right_back_leg_shoulder_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: right_back_leg_shoulder_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   left_front_leg_elbow_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: left_front_leg_elbow_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   right_front_leg_elbow_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: right_front_leg_elbow_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   left_back_leg_elbow_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: left_back_leg_elbow_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
   right_back_leg_elbow_hinge_controller:
-    type: "effort_controllers/JointPositionController"
+    type: "my_controller/MyPositionController"
     joint: right_back_leg_elbow_hinge
-    pid: {p: 10000.0, i: 380.0, d: 780.0}
+    gain: 10000.0
 
-  spring_controller:
-    type: "effort_controllers/JointPositionController"
-    joint: spring
-    pid: {p: 100.0, i: 0.0, d: 2.0}
+  # spring_controller:
+  #   type: "my_controller/MyPositionController"
+  #   joint: spring
+  #   pid: {p: 60.0, i: 0.0, d: 1}
 
 #  left_front_calf_elbow_hinge_controller:
 #    type: "my_controller/MyPositionController"
